@@ -15,8 +15,11 @@ namespace CIAO
   namespace DDS4CCM
   {
     template <typename DDS_TYPE, typename CCM_TYPE>
-    CCM_DDS_DataWriterListener_T<DDS_TYPE, CCM_TYPE>::CCM_DDS_DataWriterListener_T (::DDS::DataWriterListener_ptr s)
-      : impl_ (::DDS::DataWriterListener::_duplicate (s))
+    CCM_DDS_DataWriterListener_T<DDS_TYPE, CCM_TYPE>::CCM_DDS_DataWriterListener_T (
+      ::DDS::DataWriterListener_ptr s,
+      DataWriter_type * typed_dw)
+      : impl_ (::DDS::DataWriterListener::_duplicate (s)),
+        typed_dw_ (typed_dw)
     {
     }
 
@@ -26,42 +29,9 @@ namespace CIAO
     }
 
     template <typename DDS_TYPE, typename CCM_TYPE>
-    ::DDS::CCM_DataWriter_ptr
-    CCM_DDS_DataWriterListener_T<DDS_TYPE, CCM_TYPE>::get_datawriter_proxy (::DDSDataWriter * the_writer)
-    {
-      DDS4CCM_TRACE ("CCM_DDS_DataWriterListener_T<DDS_TYPE, CCM_TYPE>::get_datawriter_proxy");
-      // Retrieve the pointer to the proxy from the QoS
-      ::DDS_DataWriterQos qos;
-      the_writer->get_qos (qos);
-      DDS_Property_t * prop =
-        DDSPropertyQosPolicyHelper::lookup_property (qos.property,
-                                                    "CCM_DataWriterProxy");
-      if (!prop)
-        {
-          DDS4CCM_ERROR (1, (LM_ERROR, CLINFO "CCM_DDS_DataWriterListener_T"
-                            "<DDS_TYPE, CCM_TYPE>::get_datawriter_proxy -"
-                            "Unable to retrieve proxy from PropertyQosProfile\n"));
-          return ::DDS::CCM_DataWriter::_nil ();
-        }
-
-      DataWriter_type* writer =
-        reinterpret_cast < DataWriter_type* >
-          (ACE_OS::atol (prop->value));
-
-      if (!writer)
-        {
-          DDS4CCM_ERROR (1, (LM_ERROR, CLINFO "CCM_DDS_DataWriterListener_T"
-                            "<DDS_TYPE, CCM_TYPE>::get_datawriter_proxy -"
-                            "Unable to get writer from PropertyQosProfile\n"));
-        }
-
-      return writer;
-    }
-
-    template <typename DDS_TYPE, typename CCM_TYPE>
     void
     CCM_DDS_DataWriterListener_T<DDS_TYPE, CCM_TYPE>::on_offered_deadline_missed (
-      ::DDSDataWriter *the_writer,
+      ::DDSDataWriter *,
       const ::DDS_OfferedDeadlineMissedStatus & status)
     {
       DDS4CCM_TRACE ("CCM_DDS_DataWriterListener_T<DDS_TYPE, CCM_TYPE>::on_offered_deadline_missed");
@@ -69,11 +39,11 @@ namespace CIAO
       ::DDS::OfferedDeadlineMissedStatus ddsstatus;
       ddsstatus <<= status;
       this->impl_->on_offered_deadline_missed (
-        this->get_datawriter_proxy (the_writer),
+        this->typed_dw_,
         ddsstatus);
 #else
       this->impl_->on_offered_deadline_missed (
-        this->get_datawriter_proxy (the_writer),
+        this->typed_dw_,
         status);
 #endif
     }
@@ -81,7 +51,7 @@ namespace CIAO
     template <typename DDS_TYPE, typename CCM_TYPE>
     void
     CCM_DDS_DataWriterListener_T<DDS_TYPE, CCM_TYPE>::on_offered_incompatible_qos (
-      ::DDSDataWriter *the_writer,
+      ::DDSDataWriter *,
       const ::DDS_OfferedIncompatibleQosStatus & status)
     {
       DDS4CCM_TRACE ("CCM_DDS_DataWriterListener_T<DDS_TYPE, CCM_TYPE>::on_offered_incompatible_qos");
@@ -89,11 +59,11 @@ namespace CIAO
       ::DDS::OfferedIncompatibleQosStatus ddsstatus;
       ddsstatus <<= status;
       this->impl_->on_offered_incompatible_qos (
-        this->get_datawriter_proxy (the_writer),
+        this->typed_dw_,
         ddsstatus);
 #else
       this->impl_->on_offered_incompatible_qos (
-        this->get_datawriter_proxy (the_writer),
+        this->typed_dw_,
         ddsstatus);
 #endif
     }
@@ -101,7 +71,7 @@ namespace CIAO
     template <typename DDS_TYPE, typename CCM_TYPE>
     void
     CCM_DDS_DataWriterListener_T<DDS_TYPE, CCM_TYPE>::on_liveliness_lost (
-      ::DDSDataWriter *the_writer,
+      ::DDSDataWriter *,
       const ::DDS_LivelinessLostStatus & status)
     {
       DDS4CCM_TRACE ("CCM_DDS_DataWriterListener_T<DDS_TYPE, CCM_TYPE>::on_liveliness_lost");
@@ -109,11 +79,11 @@ namespace CIAO
       ::DDS::LivelinessLostStatus ddsstatus;
       ddsstatus <<= status;
       this->impl_->on_liveliness_lost (
-        this->get_datawriter_proxy (the_writer),
+        this->typed_dw_,
         ddsstatus);
 #else
       this->impl_->on_liveliness_lost (
-        this->get_datawriter_proxy (the_writer),
+        this->typed_dw_,
         status);
 #endif
     }
@@ -121,7 +91,7 @@ namespace CIAO
     template <typename DDS_TYPE, typename CCM_TYPE>
     void
     CCM_DDS_DataWriterListener_T<DDS_TYPE, CCM_TYPE>::on_publication_matched (
-      ::DDSDataWriter *the_writer,
+      ::DDSDataWriter *,
       const ::DDS_PublicationMatchedStatus & status)
     {
       DDS4CCM_TRACE ("CCM_DDS_DataWriterListener_T<DDS_TYPE, CCM_TYPE>::on_publication_matched");
@@ -129,11 +99,11 @@ namespace CIAO
       ::DDS::PublicationMatchedStatus ddsstatus;
       ddsstatus <<= status;
       this->impl_->on_publication_matched (
-        this->get_datawriter_proxy (the_writer),
+        this->typed_dw_,
         ddsstatus);
 #else
       this->impl_->on_publication_matched ();
-        this->get_datawriter_proxy (the_writer),
+        this->typed_dw_,
         ddsstatus);
 #endif
     }
