@@ -1,3 +1,13 @@
+Thu Jun 24 09:23:46 UTC 2010  Marcel Smit  <msmit@remedy.nl>
+
+        * connectors/dds4ccm/impl/dds/DDSDataWriterListener_T.h:
+        * connectors/dds4ccm/impl/dds/DDSDataWriterListener_T.cpp:
+        * connectors/dds4ccm/impl/dds/DDSPublisherListener_T.cpp:
+        * connectors/dds4ccm/impl/dds/DDSSubscriberListener_T.cpp:
+        * connectors/dds4ccm/impl/dds/DataWriter_T.cpp:
+        * connectors/dds4ccm/impl/dds/Publisher_T.cpp:
+          Passing the type datawriter onto the listener.
+
 Thu Jun 24 09:23:25 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * bin/generate_component_mpc.pl:
